[#18] Projekt auf Java Modulstruktur umgestellt
Signed-off-by: FunThomas424242 (Thomas Schubert) <funthomas424242@gmail.com>